--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
 # <https://scientific-python.org/specs/spec-0000/>
 requires-python = ">= 3.10"
 dependencies = ["numpy >= 1.24"]
-optional-dependencies = { dev = ["build"] }
+optional-dependencies = { dev = ["build", "pytest"], test = ["pytest"] }
 
 [project.urls]
 Homepage = "https://github.com/angelo-peronio/gsf_file"
@@ -34,3 +34,6 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.sdist]
 only-packages = true
+
+[tool.pytest.ini_options]
+addopts = ["--import-mode=importlib"]
