--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,3 +37,25 @@ only-packages = true
 
 [tool.pytest.ini_options]
 addopts = ["--import-mode=importlib"]
+
+[tool.ruff]
+src = ["src"]
+
+[tool.ruff.lint]
+extend-select = ["ALL"]
+ignore = [
+    "ANN",     # Type annotations
+    "COM812",  # Trailing comma missing
+    "EM",      # String in error messages
+    "FBT",     # Boolean in functiona arguments
+    "ISC001",  # Conflicts with formatter
+    "PLR09",   # Too many <...>
+    "PLR2004", # Magic value used in comparison
+    "RET504",  # Unnecessary assignment before return statement
+    "TRY003",  # Long message as argument.
+]
+extend-per-file-ignores."tests/*.py" = [
+    "S101", # Assert
+]
+
+pydocstyle.convention = "numpy"
