--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,5 @@
-name: Continuous Integration
+# From https://learn.scientific-python.org/development/guides/gha-basic/
+name: test
 
 on:
   pull_request:
@@ -19,6 +20,8 @@ jobs:
     name: Check Python ${{ matrix.python-version }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
