--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,7 +30,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ${{ fromJson(needs.build-package.outputs.python-versions) }}
+        python-version: ${{ fromJson(needs.build.outputs.python-versions) }}
     steps:
       # One could test the packaged code instead.
       # https://github.com/hynek/structlog/blob/main/.github/workflows/ci.yml
