--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -67,7 +67,7 @@ jobs:
       - name: Download the dists
         uses: actions/download-artifact@v4
         with:
-          name: python-package-distributions
+          name: Packages
           path: dist/
 
       - name: Publish to TestPyPI
