--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,8 +1,12 @@
+# Resources and recipes:
+# * <https://packaging.python.org/en/latest/guides/publishing-package-distribution-releases-using-github-actions-ci-cd-workflows/>
+# * <https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python>
+# * <https://github.com/hynek/build-and-inspect-python-package>
+
 name: ci
 
 on:
   workflow_dispatch:
-  pull_request:
   push:
     branches:
       - master
@@ -56,11 +60,9 @@ jobs:
     name: Publish to TestPyPI
     needs: test
     runs-on: ubuntu-latest
-
     environment:
       name: testpypi
       url: https://test.pypi.org/p/gsffile
-
     permissions:
       id-token: write # IMPORTANT: mandatory for trusted publishing
 
@@ -75,3 +77,57 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://test.pypi.org/legacy/
+
+  publish-to-pypi:
+    name: Publish to PyPI
+    if: startsWith(github.ref, 'refs/tags/') # only publish to PyPI on tag pushes
+    needs: test
+    runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/gsffile
+    permissions:
+      id-token: write
+
+    steps:
+      - name: Download the dists
+        uses: actions/download-artifact@v4
+        with:
+          name: Packages
+          path: dist/
+
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+
+  github-release:
+    name: GitHub release
+    needs:
+      - publish-to-pypi
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: write # IMPORTANT: mandatory for making GitHub Releases
+
+    steps:
+      - name: Download the dists
+        uses: actions/download-artifact@v4
+        with:
+          name: Packages
+          path: dist/
+
+      - name: Create GitHub Release
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        run: >-
+          gh release create
+          '${{ github.ref_name }}'
+          --repo '${{ github.repository }}'
+          --notes ""
+
+      - name: Upload artifact signatures to GitHub Release
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        run: >-
+          gh release upload
+          '${{ github.ref_name }}' dist/**
+          --repo '${{ github.repository }}'
