--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = ["numpy >= 1.24"]
 optional-dependencies = { dev = [
     "build",
     "pytest",
+    "pre-commit",
     "ruff",
     "twine",
 ], test = [
