--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,3 +14,8 @@ repos:
         args: ["--pytest-test-first"]
       - id: requirements-txt-fixer
       - id: trailing-whitespace
+
+  - repo: https://github.com/asottile/pyupgrade
+    rev: "v3.16.0"
+    hooks:
+      - id: pyupgrade
