--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,5 @@
 # Resources and recipes:
+# * <https://docs.github.com/en/actions>
 # * <https://packaging.python.org/en/latest/guides/publishing-package-distribution-releases-using-github-actions-ci-cd-workflows/>
 # * <https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python>
 # * <https://github.com/hynek/build-and-inspect-python-package>
@@ -37,6 +38,10 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ${{ fromJson(needs.build.outputs.python-versions) }}
+        include:
+          - python: "pypy3.9"
+          - python: "pypy3.10"
+          - python: "3.13"
     steps:
       # One could test the packaged code instead.
       # https://github.com/hynek/structlog/blob/main/.github/workflows/ci.yml
@@ -80,7 +85,8 @@ jobs:
 
   publish-to-pypi:
     name: Publish to PyPI
-    if: startsWith(github.ref, 'refs/tags/') # only publish to PyPI on tag pushes
+    # Only publish to PyPI on release tags.
+    if: startsWith(github.ref, 'refs/tags/v[0-9]+.[0-9]+.[0-9]+')
     needs: test
     runs-on: ubuntu-latest
     environment:
