--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
 ]
 # cientific Python reccomendation on Python and NumPy versions to support.
 # <https://scientific-python.org/specs/spec-0000/>
+# Upgrade the pyupgrade configuration in .pre-commit.config.yaml accordingly.
 requires-python = ">= 3.10"
 dependencies = ["numpy >= 1.24"]
 optional-dependencies = { dev = [
