--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -86,7 +86,7 @@ jobs:
   publish-to-pypi:
     name: Publish to PyPI
     # Only publish to PyPI on release tags.
-    if: startsWith(github.ref, 'refs/tags/v[0-9]+.[0-9]+.[0-9]+')
+    if: startsWith(github.ref, 'refs/tags/v')
     needs: test
     runs-on: ubuntu-latest
     environment:
