--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,6 +66,11 @@ jobs:
       - name: Test package
         run: python -m pytest
 
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+
   publish-to-testpypi:
     name: Publish to TestPyPI
     needs: test
