--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,6 @@ pydocstyle.convention = "numpy"
 
 [tool.mypy]
 files = "src"
-# strict = true
-# enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
+strict = true
+enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
 warn_unreachable = true
