--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,14 @@ repos:
             args: ["--fix", "--show-fixes"]
           - id: ruff-format
 
+    - repo: https://github.com/pre-commit/mirrors-mypy
+      rev: "v1.11.2"
+      hooks:
+          - id: mypy
+            additional_dependencies: [numpy]
+            # https://stackoverflow.com/a/75447331
+            exclude: "tests/.*\\.py"
+
     - repo: https://github.com/pre-commit/pre-commit-hooks
       rev: "v4.6.0"
       hooks:
