--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,12 @@ repos:
             args: ["--fix", "--show-fixes"]
           - id: ruff-format
 
+    - repo: https://github.com/rbubley/mirrors-prettier
+      rev: "V3.3.3"
+      hooks:
+          - id: prettier
+            types_or: [toml, yaml]
+
     - repo: https://github.com/pre-commit/mirrors-mypy
       rev: "v1.11.2"
       hooks:
