--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         },
         "editor.defaultFormatter": "charliermarsh.ruff"
     },
+    // https://stackoverflow.com/a/75988836
+    "editor.detectIndentation": false,
     "python.testing.pytestArgs": [
         "tests"
     ],
