--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,10 +47,8 @@ jobs:
             fail-fast: false
             matrix:
                 python-version: ${{ fromJson(needs.build.outputs.python-versions) }}
-                # These take forever because NumPy is installed from source.
-                # include:
-                #   - python-version: "3.13"
-                #   - python-version: "pypy3.10"
+                include:
+                    - python-version: "pypy3.10"
         steps:
             # One could test the packaged code instead.
             # https://github.com/hynek/structlog/blob/main/.github/workflows/ci.yml
