--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,45 +30,30 @@ jobs:
         name: Build and verify package
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v4
+            - name: Checkout source code
+              uses: actions/checkout@v4
               with:
                   fetch-depth: 0
 
-            - uses: hynek/build-and-inspect-python-package@v2
+            - name: Build and inspect Python package
+              uses: hynek/build-and-inspect-python-package@v2
               id: baipp
 
-        outputs:
-            python-versions: ${{ steps.baipp.outputs.supported_python_classifiers_json_array }}
-
     test:
-        name: Test on Python ${{ matrix.python-version }}
+        name: Test
         needs: build
         runs-on: ubuntu-latest
-        strategy:
-            fail-fast: false
-            matrix:
-                python-version: ${{ fromJson(needs.build.outputs.python-versions) }}
-                # Test also on the latest PyPy.
-                # Only upgrade the PyPy version after NumPy publishes binary wheels
-                # for the new one, otherwise the CI would take too long.
-                include:
-                    - python-version: "pypy3.10"
         steps:
             # One could test the packaged code instead.
             # https://github.com/hynek/structlog/blob/main/.github/workflows/ci.yml
-            - uses: actions/checkout@v4
+            - name: Checkout source code
+              uses: actions/checkout@v4
 
-            - name: Setup Python ${{ matrix.python-version }}
-              uses: actions/setup-python@v5
-              with:
-                  python-version: ${{ matrix.python-version }}
-                  allow-prereleases: true
-
-            - name: Install package
-              run: python -m pip install .[test]
+            - name: Setup nox
+              uses: wntrblm/nox@2024.10.09
 
             - name: Test package
-              run: python -m pytest
+              run: nox
 
             - name: Upload coverage reports to Codecov
               uses: codecov/codecov-action@v4.6.0
