--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,6 +53,7 @@ jobs:
               uses: astral-sh/setup-uv@v3
               with:
                   enable-cache: true
+                  cache-dependency-glob: "pyproject.toml"
 
             - name: Setup nox
               uses: wntrblm/nox@2024.10.09
