--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,6 +62,8 @@ jobs:
               uses: codecov/codecov-action@v4.6.0
               with:
                   token: ${{ secrets.CODECOV_TOKEN }}
+                  fail_ci_if_error: true
+                  verbose: true
 
     publish-to-testpypi:
         name: Publish to TestPyPI
