--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ addopts = [
     "--strict-markers",
 ]
 filterwarnings = ["error"]
-log_cli_level = "INFO"
+log_cli_level = "DEBUG"
 minversion = "7"
 xfail_strict = true
 testpaths = ["tests"]
