--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Image Processing",
     "Typing :: Typed",
 ]
+# Status of Python versions
+# <https://devguide.python.org/versions/>
 # Scientific Python recommendation on Python and NumPy versions to support.
 # <https://scientific-python.org/specs/spec-0000/>
 requires-python = ">= 3.10"
