--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,13 +16,11 @@ repos:
             types_or: [toml, yaml]
 
     - repo: https://github.com/pre-commit/mirrors-mypy
-      rev: "v1.11.2"
+      rev: "v1.12.0"
       hooks:
           - id: mypy
             # Dependencies needed for their types.
-            additional_dependencies: [nox, numpy]
-            # https://stackoverflow.com/a/75447331
-            exclude: "tests/.*\\.py"
+            additional_dependencies: [nox, numpy, pytest]
 
     - repo: https://github.com/pre-commit/pre-commit-hooks
       rev: "v5.0.0"
