--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ optional-dependencies.dev = [
     "build",
     "mypy",
     "pre-commit",
+    "nox",
     "ruff",
     "twine",
     "gsffile[test]",
@@ -87,7 +88,7 @@ extend-per-file-ignores."tests/*.py" = [
 pydocstyle.convention = "numpy"
 
 [tool.mypy]
-files = ["src"]
+files = ["src", "tests", "noxfile.py"]
 strict = true
 enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
 warn_unreachable = true
