get_python_versions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,4 +95,6 @@ enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
 
 [tool.uv]
 # uv should not cache gsffile.
+# See e.g. warning at
+# <https://nox.thea.codes/en/stable/usage.html#changing-the-sessions-default-backend>
 reinstall-package = ["gsffile"]
