Simplify test matrices

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,4 +19,9 @@
     ],
     "git.followTagsWhenSync": true,
     "python.analysis.typeCheckingMode": "off",
+    "cSpell.words": [
+        "Codecov",
+        "envdir",
+        "gsffile"
+    ],
 }
