--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ classifiers = [
 # Scientific Python recommendation on Python and NumPy versions to support.
 # <https://scientific-python.org/specs/spec-0000/>
 requires-python = ">= 3.10"
-# Keep in sync with numpy_python_versions in noxfile.py.
+# Before attempting stunts here, consider the fragile logic
+# for oldest_deps in noxfile.py.
 dependencies = ["numpy >= 1.24"]
 optional-dependencies.dev = [
     "build",
