--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,6 +34,7 @@ jobs:
               uses: actions/checkout@v4
               with:
                   fetch-depth: 0
+                  persist-credentials: false
 
             - name: Build and inspect Python package
               uses: hynek/build-and-inspect-python-package@v2
@@ -46,6 +47,8 @@ jobs:
         steps:
             - name: Checkout source code
               uses: actions/checkout@v4
+              with:
+                  persist-credentials: false
 
             # https://docs.astral.sh/uv/guides/integration/github/
             - name: Setup uv
