--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ keywords = ["Gwyddion", "Gwyddion Simple Field", "gsf"]
 dynamic = ["version"]
 readme = "README.md"
 # Test will run against the Python versions listed in the Trove classifiers.
-# Support the next pre-release Python version only after NumPy has published
+# Support the next release-candidate Python version only after NumPy has published
 # binary wheels for it, otherwise the CI would take too long.
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -20,10 +20,8 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
-    # Support Python 3.14 when NumPy will have wheels for it.
-    # https://github.com/numpy/numpy/issues/29062
-    # Update the README badge accordingly.
     # "Programming Language :: Python :: 3.14",
+    # https://github.com/numpy/numpy/issues/29062
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
     "Topic :: File Formats",
