--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,15 @@ requires-python = ">= 3.10"
 dependencies = ["numpy >= 1.24"]
 
 [dependency-groups]
-dev = [{ include-group = "test" }, "build", "mypy", "pre-commit", "nox", "ruff"]
+dev = [
+    "build",
+    "mypy",
+    "pre-commit",
+    "pre-commit-uv",
+    "nox",
+    "ruff",
+    { include-group = "test" },
+]
 test = ["pytest", "pytest-cov"]
 
 [project.urls]
