--- a/.editorconfig
+++ b/.editorconfig
@@ -9,5 +9,5 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 max_line_length = 88
 
-[*.{yaml,yml}]
+[*.{yaml,yml,cff}]
 indent_size = 2
