--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,26 +2,6 @@ ci:
   autoupdate_commit_msg: Update pre-commit hooks
 
 repos:
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.12.10
-    hooks:
-      - id: ruff-check
-        args: [--fix, --show-fixes]
-      - id: ruff-format
-
-  - repo: https://github.com/rbubley/mirrors-prettier
-    rev: v3.6.2
-    hooks:
-      - id: prettier
-        types_or: [toml, yaml]
-
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.17.1
-    hooks:
-      - id: mypy
-        # Dependencies needed for their types.
-        additional_dependencies: [nox, numpy, pytest]
-
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
     hooks:
@@ -42,3 +22,28 @@ repos:
         args: ["--pytest-test-first"]
       - id: trailing-whitespace
       - id: check-vcs-permalinks
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.12.10
+    hooks:
+      - id: ruff-check
+        args: [--fix, --show-fixes]
+      - id: ruff-format
+
+  - repo: https://github.com/rbubley/mirrors-prettier
+    rev: v3.6.2
+    hooks:
+      - id: prettier
+        types_or: [toml, yaml]
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.17.1
+    hooks:
+      - id: mypy
+        # Dependencies needed for their types.
+        additional_dependencies: [nox, numpy, pytest]
+
+  - repo: https://github.com/citation-file-format/cffconvert
+    rev: b6045d78aac9e02b039703b030588d54d53262ac # The pre-commit hook has not been released yet.
+    hooks:
+      - id: validate-cff
