--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -131,7 +131,7 @@ jobs:
           gh release create
           '${{ github.ref_name }}'
           --repo '${{ github.repository }}'
-          --notes ""
+          --notes '[Changelog](https://github.com/angelo-peronio/gsffile/blob/${{ github.ref_name }}/CHANGELOG.md)'
 
       - name: Upload artifacts to GitHub Release
         env:
