Exclude lockfile from sdist

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ requires = ["hatchling >= 1.26", "hatch-vcs"]
 build-backend = "hatchling.build"
 
 [tool.hatch]
-build.targets.sdist.exclude = ["/.**", "/scripts", "development.md"]
+build.targets.sdist.exclude = ["/.**", "/scripts", "development.md", "uv.lock"]
 version.source = "vcs"
 
 [tool.hatch.version.raw-options]
