--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -129,14 +129,14 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         run: >-
           gh release create
-          '${{ github.ref_name }}'
-          --repo '${{ github.repository }}'
-          --notes '[Changelog](https://github.com/angelo-peronio/gsffile/blob/${{ github.ref_name }}/CHANGELOG.md)'
+          ${{ github.ref_name }}
+          --repo ${{ github.repository }}
+          --notes "[Changelog](https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/CHANGELOG.md)"
 
       - name: Upload artifacts to GitHub Release
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: >-
           gh release upload
-          '${{ github.ref_name }}' dist/**
-          --repo '${{ github.repository }}'
+          ${{ github.ref_name }} dist/**
+          --repo ${{ github.repository }}
