--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -2,10 +2,10 @@
 version: 2
 updates:
   # Maintain dependencies for GitHub Actions
-  - package-ecosystem: "github-actions"
+  - package-ecosystem: github-actions
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: monthly
     groups:
       actions:
         patterns:
